overlays/kimawesome/infrastructure/http-echo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo
spec:
  parentRefs:
    - name: https-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "kim.tplinkdns.com"       # Specific hostname for this app
  rules:
    - name: echo
      matches:
        - path:
            type: PathPrefix
            value: /echo
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: http-echo
          port: 8080
